# web-ctf-help

./: .gitignore  README.md  requirements.txt  setup.cfg
modules/: img_source_find.py
src/: __init__.py  __main__.py  __version__.py  webctf.py
src/modules/: comment_find.py  headers_view.py  script_source_find.py
webctf/: __init__.py  __main__.py  cli.py  main.py
webctf/modules/: cookie_send.py  flag_find.py  headers_view.py
