[metadata]
name = webctf
version = attr: src.__version__.version
author = Jakub Osmani

description = HTML source scraper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xnomas/web-ctf-help
keywords = ctf, html, scraper

license = GPL-3.0 License
license_file = LICENSE

classifiers =
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
package_dir =
	=src
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
	webctf = webctf:main

[options.packages.find]
where=src
